fixed copyright and spacing issues

--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -65,7 +65,7 @@
 
     .footer-right > .right-1, .right-2 {display: none}
     
-    .copyright .container {
+    .copyright .container-copyright {
         display:     block;
         margin:     0 auto;
         text-align: center;
