--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -22,7 +22,8 @@ h2 {
     font-size: 1.4rem;
     color:    $orange;
     font-weight:  400;
-    padding-bottom: 1.4rem;
+    padding-top: 1rem;
+    padding-bottom: 0.8rem;
 }
 
 p {
