--- a/scss/style.scss
+++ b/scss/style.scss
@@ -86,6 +86,7 @@ nav {
     }
 }
 
+button, button:hover {cursor: pointer}
 
 /*----------  Mobile Nav  ----------*/
 
@@ -324,7 +325,10 @@ button {
     padding: 60px 0;
     background-color: $bright-blue;
 
-    .text-content {width: 70%}
+    .text-content {
+        width: 70%;
+        h1 {padding-bottom: 0.7rem}
+    }
 
     button {
         color: $white;
@@ -396,7 +400,14 @@ footer {
     }
 }
 
-
+.container-copyright {
+    width:   1100px;
+    padding: 0 30px;
+    margin:  0 auto;
+    display:   flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .copyright {
     height:    auto;
     width:     100%;
